--- a/main.html
+++ b/main.html
@@ -10,7 +10,29 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form action=method>
+	<h1>Feedback Form</h1>
+	<label for="name">Name</label>
+	<input type="text"  name="name" id="name" minimum="3" maximum="100" required>
 
+<!-- 	<label for="portfolio">Portfolio</label> -->
+		<div>
+			<a href="#" id="portfolio">user's</a>
+		</div> 
+		<div>
+		<label for="favColor">Color</label>
+		<input type="color" name="favColor" id="favColor" required>
+		
+	</div>
+		<div>
+			<label for="likeness"></label>
+			<input type="text" id="likeness" minimum="1" maximum="100">
+		</div>
+	
+	
+<button type="button">Submit</button>
+   
+	</form>	
 </body>
 
 </html>
