--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 	</div>
 		<div>
 			<label for="likeness"></label>
-			<input type="text" id="likeness" minimum="1" maximum="100">
+			<input type="range" id="likeness" minimum="1" maximum="100">
 		</div>
 	
 	
