--- a/main.html
+++ b/main.html
@@ -10,29 +10,33 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form action=method>
-	<h1>Feedback Form</h1>
-	<label for="name">Name</label>
-	<input type="text"  name="name" id="name" minimum="3" maximum="100" required>
 
-<!-- 	<label for="portfolio">Portfolio</label> -->
-		<div>
-			<a href="#" id="portfolio">user's</a>
-		</div> 
-		<div>
+<form method="post">
+	<h1>Feedback Form</h1>
+	<div>
+	<label for="name">Name</label>
+	<input type="text" name="name" id="name" maxlength="100" min="3" required>
+	</div>
+	
+	<div>
+		<a href="#" id="portfolio">user's </a>
+	</div>
+	
+	<div>
 		<label for="favColor">Color</label>
 		<input type="color" name="favColor" id="favColor" required>
 		
 	</div>
-		<div>
-			<label for="likeness"></label>
-			<input type="range" id="likeness" minimum="1" maximum="100">
-		</div>
+
+	<div>
+		<label for="likeness"></label>
+		<input type="range" min="1" maxlength="100">
+		
+	</div>
+
+	<button type="button">Submit</button>
+</form>	
 	
-	
-<button type="button">Submit</button>
-   
-	</form>	
 </body>
 
 </html>
