--- a/main.html
+++ b/main.html
@@ -1,34 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Pricing Card</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-Feedback Form
-<form method="post">
-  <label for="name">Your name</label>
-  <input type="text" id="name" minlength="3" maxlength="50" required />
-  <br />
-  <label for="portfolio">You portfolio</label>
-  <input type="url" id="portfolio" required />
-  <br />
-  <label for="favColor">Your fav color</label>
-  <input type="color" id="favColor" />
-  <br />
-  <label for="likeness">From one to hundred choose likeness</label>
-  <input type="range" id="likeness" min="1" max="100" />
-  <br />
-  <button type="submit">Submit</button>
-  <br />
-  <button type="reset">Reset form</button>
-</form>
-	
+  <div class="pricing-card">
+    <div class="pricing-card__header">
+      <h2 class="pricing-card__title">Basic Plan</h2>
+      <p class="pricing-card__price">$9.99</p>
+    </div>
+    <ul class="pricing-card__features">
+      <li>Feature 1</li>
+      <li>Feature 2</li>
+      <li>Feature 3</li>
+    </ul>
+    <button class="pricing-card__button">Get Started</button>
+  </div>
 </body>
-
 </html>
